frontend/test/should_fail/index_mm_min_max_edge2.grg
#using "index_min_max_size_model.gm"

rule ric {
	n:N -e:E-> n;
	
	if { maxEdgeFromIndex(ic) in edgesFromIndex(bari); }
	
	modify {
	}
}
